javafx + kotlin coroutines + modular
1、jlink successfully.
2、jpackage successfully.